DOCSTRINGS and few models plots

--- a/main.ipynb
+++ b/main.ipynb
@@ -213,6 +213,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Validation loss plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "val_loss_list = []\n",
+    "with torch.no_grad():\n",
+    "  for i in range(len(val_features)):\n",
+    "    y_pred = model(val_features[i])\n",
+    "    loss = criterion(y_pred, val_targets[i].long())\n",
+    "    val_loss_list.append(loss)\n",
+    "\n",
+    "plt.plot(val_loss_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Сhecking the model on a validation set"
    ]
@@ -229,6 +253,35 @@
     "    loss = criterion(y_pred, val_targets.long())\n",
     "    pred = torch.max(y_pred, 1)[1].eq(val_targets).sum()\n",
     "    print (\"Accuracy : {}%\".format(100*pred/len(test_features)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cheking the model on random feedback from original dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = 0\n",
+    "for text in sparse_matrix:\n",
+    "  if np.array_equal(x_val[6], text):\n",
+    "    print(text)\n",
+    "    print(count)\n",
+    "    break\n",
+    "  else:\n",
+    "    count+=1\n",
+    "\n",
+    "print(data.iloc[count])\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "  y_pred = model(torch.Tensor(x_val[6]))\n",
+    "  print(y_pred)"
    ]
   },
   {
@@ -290,13 +343,21 @@
     "    text = \" \".join(tokens)\n",
     "    return text.split()\n",
     "\n",
-    "def my_vect(text:str):\n",
-    "  tensor = 31887*[0]\n",
-    "  text = preprocess_text(text_update(text))\n",
-    "  for word in set(text): \n",
-    "    if word in words:\n",
-    "      tensor[words.index(word)] = text.count(word)\n",
-    "  return tensor"
+    "def my_vect(text:str)->List[float]:\n",
+    "    \"\"\"function vectorizes text\n",
+    "\n",
+    "    Args:\n",
+    "        text (str): text for loading into the model\n",
+    "\n",
+    "    Returns:\n",
+    "        List[float]: List of words values\n",
+    "    \"\"\"\n",
+    "    tensor = 31887*[0]\n",
+    "    text = preprocess_text(text_update(text))\n",
+    "    for word in set(text): \n",
+    "        if word in words:\n",
+    "            tensor[words.index(word)] = text.count(word)\n",
+    "    return tensor"
    ]
   },
   {
@@ -312,7 +373,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(text: str):\n",
+    "def predict(text: str)->torch.Tensor:\n",
+    "  \"\"\"_summary_The function converts the text into a tensor and loads it into the model for testing\n",
+    "\n",
+    "  Args:\n",
+    "      text (str): text for testing\n",
+    "\n",
+    "  Returns:\n",
+    "      torch.Tensor: tensor of predictions\n",
+    "  \"\"\"\n",
     "  model.eval()\n",
     "  with torch.no_grad():\n",
     "    y_pred = model(torch.Tensor(my_vect(text)))\n",
